syntax = "proto2";

enum modem_type {
    GMSK = 1;
}

enum demod_destination {
    FILE = 0;
    SOCKET = 1;
    BOTH = 2;
}

message doppler_settings {
    repeated string tle = 1;
    required uint32 latitude = 2;  //degrees times 10^6
    required uint32 longitude = 3;  //degrees times 10^6
    required uint32 altitude = 4;  //kilometers times 10^6
}

message fsk_demodulation_settings {
    required int32 demod_fsk_deviation = 1;
    required uint32 demod_fsk_transition_width = 2;
    required bool demod_fsk_use_dc_block = 3;
}

message fsk_modulation_settings {
    required int32 mod_fsk_deviation = 1;
}

message RxRequest {
    required uint32 rx_center_freq = 1;
    required uint32 rx_sampling_freq = 2;
    required bool rx_dump_file = 3;
    required uint32 rx_sdr_server_band_freq = 4;
    required modem_type demod_type = 5;
    required uint32 demod_baud_rate = 6;
    required uint32 demod_decimation = 7;
    required demod_destination demod_destination = 8;

    optional doppler_settings doppler = 9;
    optional fsk_demodulation_settings fsk_settings = 10;
}

message TxRequest {
    required uint32 tx_center_freq = 1;
    required uint32 tx_sampling_freq = 2;
    required bool tx_dump_file = 3;
    required modem_type mod_type = 4;
    required uint32 mod_baud_rate = 5;

    optional doppler_settings doppler = 6;
    optional fsk_modulation_settings fsk_settings = 7;
}

enum response_status {
    SUCCESS = 0;
    FAILURE = 1;
}

message Response {
    required response_status status = 1;
    required uint32 details = 2;
}

message TxData {
    required bytes data = 1;
}